# mcp-redmine-proxy

./: Dockerfile  LICENSE  README.md  requirements.txt
mcp-redmine/: .gitignore  Dockerfile  INSTRUCTIONS_EXAMPLE1.md  INSTRUCTIONS_EXAMPLE2.md  Makefile  README.md  docker-build.sh  pyproject.toml
mcp-redmine/mcp_redmine/: redmine_openapi.yml  server.py
proxy/: main.py  mcp_bridge.py
